Header tweaks and code fixes for stuck avatars

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -304,19 +304,19 @@ textarea {
   position: relative;
   top: -20px;
 }
+
 .page-heading {
   padding: 0px 0 0 0;
   border-bottom: 2px solid @brand-header;
   background: @body-bg;
-  margin-bottom: 20px;
 }
 
 .page-heading h2 {
-  margin: 10px 0 0 0;
+  margin: 0;
 }
 
 .page-heading p {
-  margin-bottom: 0px;
+  margin-bottom: 5px;
 }
 
 .forum-heading {
